--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "starter",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://hangnguyen1199.github.io/shopping-list",
+  "homepage": "http://hangnguyen1199.github.io/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
